--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,9 +13,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-      - name: Build
-        run: ./mvnw verify -B
+      - name: CommandLine
+        run: sed -i 's/ PublicIp,//' ip.txt
+      - name: CommandLine2
+        run: ls
+      - name: CommandLine3
+        run: cat ip.txt
