--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,6 @@ jobs:
       - name: CommandLine3
         run: |
          cat ip.txt
-         ip=$( cat ip.txt )
+         var=$( cat ip.txt )
       - name: CommandLine4
-        run: echo "$ip"
+        run: echo $var
