--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,4 @@ jobs:
         run: |
          cat ip.txt
          var=$(<ip.txt)
-      - name: CommandLine4
-        run: echo $var
+         echo $var
