--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,5 +24,5 @@ jobs:
         run: |
          ip=$(<ip.txt)
          echo $ip
-         sed -i 's/IP/$ip/g' ip.txt
+         sed -i 's/#{IP}/$ip/g' ip.txt
          cat ip.json
