--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,5 +23,6 @@ jobs:
       - name: CommandLine3
         run: |
          ip=$(<ip.txt)
-         echo $ip | sed -i 's/#{IP}/$ip/g' ip.txt
+         echo $ip
+         sed -i 's/#{IP}/$(ip)/g' ip.txt
          cat ip.json
