--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,5 @@ jobs:
       - name: CommandLine3
         run: |
          ip=$(<ip.txt)
-         echo $ip
-         sed -i 's/#{IP}/$ip/g' ip.json
+         echo $ip | sed -i 's/#{IP}/$ip/g' ip.json
          cat ip.json
