--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,6 @@ jobs:
         run: |
          ip=$(<ip.txt)
          echo $ip
-         EXPORT ip=$ip
+         export ip=$ip
          sed -i 's/#{IP}/$ip/g' ip.json
          cat ip.json
