--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,6 @@ jobs:
          echo "ip=hola" >> $GITHUB_ENV
          sed -i 's/#{IP}/${{ env.ip }}/g' ip.json
          cat ip.json
+      - name: CommandLine4
+        run: |
+         echo ${{ env.ip }}
